kubernetes/apps/media/audiobookshelf/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Audiobookshelf"
    homepage.shamubernetes.com/description: "Audiobooks and podcasts"
    homepage.shamubernetes.com/group: "Media"
    homepage.shamubernetes.com/order: "30"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:audiobookshelf"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "audiobookshelf.${HOME_DOMAIN}"
  rules:
  -
    backendRefs:
    - name: audiobookshelf
      port: 80
